syntax = "proto3";





package fmq.finalmq.variant;



//////////////////////////////
// Enums
//////////////////////////////



enum VarTypeId {
    T_NONE = 0;
    T_BOOL = 1;
    T_INT32 = 2;
    T_UINT32 = 3;
    T_INT64 = 4;
    T_UINT64 = 5;
    T_FLOAT = 6;
    T_DOUBLE = 7;
    T_STRING = 8;
    T_BYTES = 9;
    T_STRUCT = 10;
    T_ARRAY_BOOL = 1025;
    T_ARRAY_INT32 = 1026;
    T_ARRAY_UINT32 = 1027;
    T_ARRAY_INT64 = 1028;
    T_ARRAY_UINT64 = 1029;
    T_ARRAY_FLOAT = 1030;
    T_ARRAY_DOUBLE = 1031;
    T_ARRAY_STRING = 1032;
    T_ARRAY_BYTES = 1033;
    T_LIST = 1034;
}




//////////////////////////////
// Structs
//////////////////////////////


message VarValue
{
    string name = 1;
    fmq.finalmq.variant.VarTypeId type = 2;
    bool valbool = 3;
    sfixed32 valint32 = 4;
    fixed32 valuint32 = 5;
    sfixed64 valint64 = 6;
    fixed64 valuint64 = 7;
    float valfloat = 8;
    double valdouble = 9;
    string valstring = 10;
    bytes valbytes = 11;
    repeated fmq.finalmq.variant.VarValue vallist = 12;
    repeated bool valarrbool = 13;
    repeated sfixed32 valarrint32 = 14;
    repeated fixed32 valarruint32 = 15;
    repeated sfixed64 valarrint64 = 16;
    repeated fixed64 valarruint64 = 17;
    repeated float valarrfloat = 18;
    repeated double valarrdouble = 19;
    repeated string valarrstring = 20;
    repeated bytes valarrbytes = 21;
};



